# test

./: (.+  CLAUDE.md  CMakeLists.txt  ione liner  xxx  パス名  ファイル名
.claude/: hooks.json  settings.json
.claude/commands/: build-check.md  build-fix.md  handoff-reader.md  juce-impl.md  juce-testing.md
.claude/handoff/: claude-handoff.md  design.md  spec.md  tasks.md
.copilot/handoff/: copilot-handoff.md  debug-html.md  design.md  scaffold.md  spec.md  test.md  test2.md  untitled.md
.github/: copilot-instructions.md
.github/agents/: juce-builder.agent.md
.github/hooks/: validation.hooks.json
.github/skills/build-check/: SKILL.md
.github/skills/handoff-reader/: SKILL.md
.github/skills/juce-impl/: SKILL.md
.github/skills/juce-testing/: SKILL.md
CloudsVST/: ReadMe(JP).md
MetalCosmos/: 開発メモ.md
SimpleGain/: CMakeLists.txt
SimpleGain/Source/: Parameters.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/DSP/: BiquadFilter.cpp  DiodeFeedbackClipper.cpp  DiodeMorpher.cpp  MT2GainStage.cpp  MT2ToneStack.cpp  OnePoleFilter.cpp
cloudsVST/: readme(ENG).md
loom/midi/: README.md  requirements.txt
loom/midi/ot/_midi/: _engine.py
loom/midi/test/: _engine.py
scaffold/: Parameters.h
scaffold/DSP/: BiquadFilter.h  DiodeFeedbackClipper.h  DiodeMorpher.h  MT2GainStage.h  MT2ToneStack.h  OnePoleFilter.h
scripts/: fix-counter.sh
